Set application icon on Linux and Windows

--- a/src/skin/default/resources.qrc
+++ b/src/skin/default/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>assets/Basic-Copy-icon.png</file>
+        <file>assets/app_icon.png</file>
         <file>assets/qrcode.png</file>
     </qresource>
 </RCC>
