Fix blockchain chooser

--- a/src/ui/blockchainchooser.ui
+++ b/src/ui/blockchainchooser.ui
@@ -27,6 +27,9 @@
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
+     <attribute name="horizontalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
     </widget>
    </item>
    <item>
@@ -49,6 +52,9 @@
       <bool>false</bool>
      </property>
      <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+     <attribute name="horizontalHeaderVisible">
       <bool>false</bool>
      </attribute>
     </widget>
