--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -37,7 +37,7 @@
         <number>0</number>
        </property>
        <item>
-        <spacer name="horizontalSpacer">
+        <spacer name="identitySpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -68,7 +68,7 @@
            <number>0</number>
           </property>
           <item>
-           <spacer name="verticalSpacer">
+           <spacer name="profileSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
@@ -203,8 +203,106 @@
       </widget>
       <widget class="QWidget" name="messageTab">
        <attribute name="title">
-        <string>Messages</string>
+        <string>Activity</string>
        </attribute>
+       <layout class="QHBoxLayout" name="messageTabLayout">
+        <item>
+         <widget class="QFrame" name="contactListFrame">
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Plain</enum>
+          </property>
+          <layout class="QVBoxLayout" name="contactListFrameLayout">
+           <property name="spacing">
+            <number>3</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QListView" name="contactListView"/>
+           </item>
+           <item>
+            <widget class="QPushButton" name="addContact">
+             <property name="text">
+              <string>Add Contact</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QFrame" name="activityThreadFrame">
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Plain</enum>
+          </property>
+          <layout class="QGridLayout" name="activityThreadFrameLayout">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <property name="spacing">
+            <number>3</number>
+           </property>
+           <item row="0" column="0" colspan="2">
+            <widget class="QTableView" name="activityThreadView">
+             <property name="showGrid">
+              <bool>false</bool>
+             </property>
+             <attribute name="horizontalHeaderVisible">
+              <bool>true</bool>
+             </attribute>
+             <attribute name="horizontalHeaderHighlightSections">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="horizontalHeaderStretchLastSection">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderHighlightSections">
+              <bool>false</bool>
+             </attribute>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QPushButton" name="sendMessage">
+             <property name="text">
+              <string>Send Message</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0" rowspan="2">
+            <widget class="QPlainTextEdit" name="messageEdit"/>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
