--- a/src/skin/default/resources.qrc
+++ b/src/skin/default/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/qwidget">
         <file>assets/Basic-Copy-icon.png</file>
         <file>assets/app_icon.png</file>
         <file>assets/qrcode.png</file>
